--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.1",
-    "node-sass": "^6.0.1",
     "openseadragon": "^2.3.1",
     "quill": "^1.3.7",
     "quill-delta-to-html": "^0.12.0",
@@ -23,8 +22,7 @@
     "vue-router": "^4.0.12",
     "vue3-clipboard": "^1.0.0",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2",
-    "webpack-bundle-tracker": "^0.4.3"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,7 +31,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.64.2",
+    "webpack-bundle-tracker": "^0.4.3"
   },
   "eslintConfig": {
     "root": false,
