--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
 asgiref==3.7.2
+boto3==1.28.27
+botocore==1.31.27
+certifi==2023.7.22
+charset-normalizer==3.2.0
+dj-database-url==2.1.0
 Django==4.2.3
+django-anymail==10.1
+django-cors-headers==4.2.0
+django-nested-admin==4.0.2
+django-storages==1.13.2
+django-webpack-loader==0.7.0
+django-widget-tweaks==1.4.12
+djangorestframework==3.14.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
+idna==3.4
+jmespath==1.0.1
 Pillow==10.0.0
-sqlparse==0.4.4
+postgres==4.0
+psycopg2-binary==2.9.7
+psycopg2-pool==1.1
+python-dateutil==2.8.2
 python-decouple==3.8
+python-monkey-business==1.0.0
+pytz==2023.3
+requests==2.31.0
+s3transfer==0.6.2
+six==1.16.0
+sqlparse==0.4.4
+typing_extensions==4.7.1
+urllib3==1.26.16
