--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 drf-extra-fields==3.7.0
 filetype==1.2.0
+gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
+packaging==23.1
 Pillow==10.0.0
 postgres==4.0
 psycopg2-binary==2.9.7
@@ -30,5 +32,4 @@ six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 urllib3==1.26.16
-gunicorn==20.1.0
 whitenoise==6.5.0
